# media-renamer

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  build_binary.py  docker-compose.yml  hook-pymediainfo.py  pyi_rth_pymediainfo.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_bundling.py  tmp49_a_sau.spec  tmpcy70388k.spec  tmppy0aygt7.spec
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: changelog.yml  ci.yml  manual-release.yml  release.yml  security.yml
media_renamer/: api_clients.py  cli.py  config.py  main.py  metadata_extractor.py  models.py  quality_extractor.py  renamer.py  tv_show_consolidator.py
scripts/: build.sh  quick-test.sh  release.sh  test-python-versions.sh
src/: api_clients.py  cli.py  config.py  metadata_extractor.py  models.py  renamer.py
tests/: conftest.py  test_bundling.py  test_coverage.py  test_tv_show_consolidator.py
tests/fixtures/: sample_responses.py
tests/integration/: test_full_workflow.py
tests/unit/: test_api_clients.py  test_cli.py  test_config.py  test_metadata_extractor.py  test_models.py  test_quality_extractor.py  test_renamer.py
